--- a/DockerFile
+++ b/DockerFile
@@ -19,7 +19,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 ENV PORT=8080
 ENV PYTHONUNBUFFERED=1
 
-# Expone el puerto 8080 (usado por Cloud Run)
+# Expone el puertoq 8080 (usado por Cloud Run)
 EXPOSE 8080
 
 # Aplica migraciones y arranca el servidor con Gunicorn
