--- a/DockerFile
+++ b/DockerFile
@@ -31,4 +31,5 @@ EXPOSE 8080
 
 # Comando para ejecutar Django con Gunicorn
 # Reemplaza 'airmonitoring' por el nombre de tu carpeta principal de Django si es distinto
-CMD ["gunicorn", "airmonitoring.wsgi:application", "--bind", "0.0.0.0:8080"]
+CMD python manage.py collectstatic --noinput && python manage.py migrate && gunicorn airmonitoring.wsgi:application --bind 0.0.0.0:$PORT
+
