--- a/DockerFile
+++ b/DockerFile
@@ -15,6 +15,7 @@ COPY requirements.txt .
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     libpq-dev \
+    && pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt \
     && apt-get remove -y build-essential \
     && apt-get autoremove -y \
@@ -29,7 +30,5 @@ ENV PORT 8080
 # Exponemos el puerto 8080
 EXPOSE 8080
 
-# Comando para ejecutar Django con Gunicorn
-# Reemplaza 'airmonitoring' por el nombre de tu carpeta principal de Django si es distinto
-CMD python manage.py collectstatic --noinput && python manage.py migrate && gunicorn airmonitoring.wsgi:application --bind 0.0.0.0:$PORT
-
+# Comando CORREGIDO - usa config.wsgi en lugar de airmonitoring.wsgi
+CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8080"]
